@@ -1,0 +1,19 @@
+# Copyright (C) 2008 Anders Logg.
+# Licensed under the GNU LGPL Version 2.1.
+#
+# First added:  2008-05-23
+# Last changed: 2007-05-23
+#
+# The bilinear form a(v, U) and linear form L(v) for
+# Poisson's equation.
+#
+# Compile this form with FFC: ffc -l dolfin Poisson.form.
+
+element = FiniteElement("Lagrange", "tetrahedron", 1)
+
+v = TestFunction(element)
+u = TrialFunction(element)
+f = Function(element)
+
+a = dot(grad(v), grad(u))*dx
+L = v*f*dx
